--- a/client/index.jade
+++ b/client/index.jade
@@ -11,13 +11,14 @@ html( ng-app='romaleev' manifest='http://romaleev.com/romaleev.appcache')
 
 		title( ng-bind="pageTitle" )
 		base( href="/" )
-		link( href="img/favicon.ico", rel="shortcut icon" )
+		link( href="assets/img/favicon.ico", rel="shortcut icon" )
 
 		// build:css styles/vendor.css
 		//- vendorCSS:css
 		link(rel="stylesheet", href="../bower_components/bootstrap/dist/css/bootstrap.min.css")
 		link(rel="stylesheet", href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css")
 		link(rel="stylesheet", href="../bower_components/fontawesome/css/font-awesome.min.css")
+		link(rel="stylesheet", href="../bower_components/json-formatter/dist/json-formatter.min.css")
 		//- endinject
 		// endbuild
 
@@ -27,6 +28,8 @@ html( ng-app='romaleev' manifest='http://romaleev.com/romaleev.appcache')
 		link(rel="stylesheet", href="app/home/home.css")
 		link(rel="stylesheet", href="app/people/details.css")
 		link(rel="stylesheet", href="app/people/people.css")
+		link(rel="stylesheet", href="app/validation/validation.css")
+		link(rel="stylesheet", href="components/directives/form/form-parent/form-parent.css")
 		//- endinject
 		// endbuild
 
@@ -74,9 +77,17 @@ html( ng-app='romaleev' manifest='http://romaleev.com/romaleev.appcache')
 						li( ui-sref-active="active" )
 							a.hidden-xs( ui-sref="home" ) Home
 							a.visible-xs( ui-sref="home" data-toggle="collapse" data-target=".navbar-collapse" ) Home
-						li( ng-class="{ active: $state.includes('people') }" )
-							a.hidden-xs( ui-sref="people.list" ) People
-							a.visible-xs( ui-sref="people.list" data-toggle="collapse" data-target=".navbar-collapse" ) People
+						li.dropdown( ng-class="{ active: $state.includes('validation') || $state.includes('people')}" )
+							a.dropdown-toggle( data-toggle="dropdown" role="button" aria-expanded="false" href="" ) Examples
+								span.caret
+							ul.dropdown-menu( role="menu"  )
+								li( ng-class="{ active: $state.includes('people') }" )
+									a.hidden-xs( ui-sref="people.list" ) People
+									a.visible-xs( ui-sref="people.list" data-toggle="collapse" data-target=".navbar-collapse" ) People
+								li.divider
+								li( ng-class="{ active: $state.includes('validation') }" )
+									a.hidden-xs( ui-sref="validation" ) Validation
+									a.visible-xs( ui-sref="validation" data-toggle="collapse" data-target=".navbar-collapse" ) Validation
 
 		div.container-fluid( ui-view )
 
@@ -90,8 +101,11 @@ html( ng-app='romaleev' manifest='http://romaleev.com/romaleev.appcache')
 		script(src="../bower_components/jquery/dist/jquery.min.js")
 		script(src="../bower_components/angular/angular.min.js")
 		script(src="../bower_components/angular-ui-router/release/angular-ui-router.min.js")
+		script(src="../bower_components/angular-bootstrap/ui-bootstrap.min.js")
+		script(src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js")
 		script(src="../bower_components/angular-sanitize/angular-sanitize.min.js")
 		script(src="../bower_components/bootstrap/dist/js/bootstrap.min.js")
+		script(src="../bower_components/json-formatter/dist/json-formatter.min.js")
 		//- endinject
 		// endbuild
 
@@ -99,9 +113,15 @@ html( ng-app='romaleev' manifest='http://romaleev.com/romaleev.appcache')
 		//- userJS:js
 		script(src="app/app.js")
 		script(src="components/services/people.service.js")
+		script(src="components/directives/form/form-submit/form-submit.controller.js")
+		script(src="components/directives/form/form-select/form-select.controller.js")
+		script(src="components/directives/form/form-parent/form-parent.controller.js")
+		script(src="components/directives/form/form-input/form-input.controller.js")
+		script(src="components/directives/form/form-date/form-date.controller.js")
+		script(src="components/filters.js")
 		script(src="components/services/home.service.js")
+		script(src="app/validation/validation.controller.js")
 		script(src="app/people/people.controller.js")
 		script(src="app/home/home.controller.js")
-		script(src="components/filters.js")
 		//- endinject
 		// endbuild
