minor optimizations & fixes

--- a/client/app/home/home.jade
+++ b/client/app/home/home.jade
@@ -14,3 +14,15 @@ div( id="home" )
 				class="{{contact.icon}}",
 				target="_blank"
 			)
+
+	h3.text-center Examples
+
+	div.row.text-center
+		div.btn-group.btn-group-lg.hidden-xs
+			button.btn.btn-default( ui-sref="people.list" ) Angular State Dashboard
+			button.btn.btn-default( ui-sref="validation" ) Angular Bootstrap Validation
+			button.btn.btn-default( ui-sref="build" ) Gulp build
+		div.btn-group.btn-group-lg.btn-group-vertical.visible-xs
+			button.btn.btn-default( ui-sref="people.list" ) Angular State Dashboard
+			button.btn.btn-default( ui-sref="validation" ) Angular Bootstrap Validation
+			button.btn.btn-default( ui-sref="build" ) Gulp build
