--- a/client/app/people/details.jade
+++ b/client/app/people/details.jade
@@ -1,5 +1,5 @@
 div( id='details' )
-	h2 Person
+	h2 Angular State Dashboard - Details
 	div.row
 		table.details
 			tr( ng-repeat="field in person | fieldFilter" )
