--- a/client/app/validation/validation.less
+++ b/client/app/validation/validation.less
@@ -1,2 +1,14 @@
-div#validation{
+div#validation {
+/*	.row{
+		padding:0;
+		margin: -3px;
+	}
+	[class*="col-"]{
+	    &:not(:first-child) {
+	        padding-left: 3px;
+	    }
+	    &:not(:last-child) {
+	        padding-right: 3px;
+	    }
+	}*/
 }
