--- a/client/app/people/people.jade
+++ b/client/app/people/people.jade
@@ -1,7 +1,7 @@
 div( id='people' )
 	div.row.title
 		div.col-xs-6
-			h2 People Dashboard Example
+			h3 Angular State Dashboard
 		div.col-xs-6
 			input.form-control(
 				type='text'
