Libraries version fixes and update to the latest ones. Breaking changes fixes: Angular, AngularBootstrap, Phantom.js (gulp-seo)

--- a/client/components/directives/form/form-date/form-date.jade
+++ b/client/components/directives/form/form-date/form-date.jade
@@ -1,4 +1,4 @@
-ng-form.form-date( name="{{name}}" ng-model="model")
+ng-form.form-date( ng-model="model" )
 	div.row
 		div.col-lg-12
 			label.control-label( for="{{name}}" ng-if="$parent.title" ng-bind="$parent.title" )
